Fixed remaining problems and refactored in RaidSpawningManager